# FiveAxisPath

./: CFFFP_xyzCalibration_cube.gcode  CMakeLists 2.txt  CMakeLists.txt  LICENSE 2  README 2.md  README.md  printing.txt  skeleton_view.txt  three_axis_print.py  view_skeleton.py
CAD/: 3Y.off  DeadTree.off  bear1.off  cube.STL  tube.STL  tube.off  tube1.STL  tube1.off
include/: CuraSlicing.h  CustomisedPolyhedron.h  Function.h  PlaneCut.h  RWfile.h  Slicing.h  TransformCalcu.h  Vector.h
include 2/: FillHole.h
include 2/Cura/: ExtruderTrain.h  FffPolygonGenerator.h  FffProcessor.h  MeshGroup.h  PathOrder.h  Scene.h  SkeletalTrapezoidationEdge.h  SkeletalTrapezoidationGraph.h  SkirtBrim.h  TreeSupport.h  WallToolPaths.h  WallsComputation.h  infill.h  skin.h  sliceDataStorage.h
include/Cura/: Application.h  BoostInterface.hpp  FanSpeedLayerTime.h  FffGcodeWriter.h  GCodePathConfig.h  InsetOrderOptimizer.h  LayerPlan.h  LayerPlanBuffer.h  MeshGroup.h  PathOrderMonotonic.h  PathOrderOptimizer.h  PathOrderPath.h  Preheat.h  PrimeTower.h  RetractionConfig.h  Scene.h  SkeletalTrapezoidation.h  SkeletalTrapezoidationJoint.h  Slice.h  SupportInfillPart.h  TopSurface.h  TreeModelVolumes.h  Weaver.h  WipeScriptConfig.h  Wireframe2gcode.h  gcodeExport.h  mesh.h  raft.h  sliceDataStorage.h  slicer.h  timeEstimate.h
resources/definitions/: creality_ender3.def.json  fdmprinter.def.json
slicing refer/slicing_algorithm-master/: slicing.py
src/: BFS.cpp  BFS.h  CuraSlicing.cpp  CustomisedPolyhedron.h  FillHole.cpp  FillHole.h  FillHoleCDT.cpp  Function.cpp  Function.h  MCF_Skeleton.h  MCF_Skeleton_example.cpp  PlaneCut.cpp  PlaneCut.h  RWfile.cpp  RWfile.h  Slicing.cpp  TransformCalcu.cpp  Vector.cpp  main.cpp  readfile.cpp  readfile_backup.cpp  readfile_test.cpp  sorting.cpp
src 2/: Function.cpp  TransformCalcu.cpp
src 2/Cura/: ConicalOverhang.cpp  FffPolygonGenerator.cpp  GCodePathConfig.cpp  Mold.cpp  PathOrderPath.cpp  Scene.cpp  SkeletalTrapezoidation.cpp  TreeSupport.cpp  WallToolPaths.cpp  slicer.cpp  support.cpp
src/Cura/: Application.cpp  ExtruderTrain.cpp  FffGcodeWriter.cpp  FffPolygonGenerator.cpp  FffProcessor.cpp  InsetOrderOptimizer.cpp  LayerPlan.cpp  LayerPlanBuffer.cpp  MeshGroup.cpp  Preheat.cpp  PrimeTower.cpp  Scene.cpp  SkeletalTrapezoidationGraph.cpp  SkirtBrim.cpp  Slice.cpp  SupportInfillPart.cpp  TopSurface.cpp  TreeModelVolumes.cpp  (+14 more)
underthreeaxis/: CFFFP_Hexagon_Tower.gcode  CFFFP_ctrlv_3D_test_v3.gcode  CFFFP_ikea_kitchen_hook.gcode  CFFFP_xyzCalibration_cube.gcode  printing.gcode  printing.txt  three_axis_print.py
(+227 files in other folders)
